1.74.0/libs/multiprecision/test/compile_fail/CVS/Entries.Extra
/conv_fail_01.cpp////*////
/conv_fail_02.cpp////*////
/conv_fail_03.cpp////*////
/conv_fail_04.cpp////*////
/conv_fail_05.cpp////*////
/conv_fail_06.cpp////*////
/conv_fail_07.cpp////*////
/conv_fail_08.cpp////*////
/conv_fail_09.cpp////*////
/conv_fail_10.cpp////*////
/conv_fail_11.cpp////*////
/conv_fail_12.cpp////*////
/conv_fail_13.cpp////*////
/conv_fail_14.cpp////*////
/conv_fail_15.cpp////*////
/conv_fail_16.cpp////*////
/conv_fail_18.cpp////*////
/conv_fail_20.cpp////*////
/conv_fail_21.cpp////*////
/conv_fail_22.cpp////*////
/conv_fail_23.cpp////*////
/conv_fail_24.cpp////*////
/conv_fail_25.cpp////*////
/conv_fail_26.cpp////*////
/conv_fail_27.cpp////*////
/conv_fail_28.cpp////*////
/conv_fail_29.cpp////*////
/conv_fail_30.cpp////*////
/conv_fail_31.cpp////*////
/conv_fail_32.cpp////*////
/conv_fail_33.cpp////*////
/conv_fail_34.cpp////*////
/conv_fail_35.cpp////*////
/conv_fail_36.cpp////*////
/conv_fail_37.cpp////*////
/conv_fail_38.cpp////*////
/conv_fail_39.cpp////*////
/conv_fail_40.cpp////*////
/conv_fail_41.cpp////*////
/conv_fail_42.cpp////*////
/conv_fail_43.cpp////*////
/conv_fail_44.cpp////*////
/conv_fail_45.cpp////*////
/conv_fail_46.cpp////*////
/conv_fail_47.cpp////*////
/conv_fail_48.cpp////*////
/conv_fail_49.cpp////*////
/conv_fail_50.cpp////*////
/conv_fail_51.cpp////*////
/conv_fail_52.cpp////*////
/conv_fail_53.cpp////*////
/conv_fail_54.cpp////*////
/conv_fail_55.cpp////*////
/conv_fail_56.cpp////*////
/conv_fail_57.cpp////*////
/conv_fail_58.cpp////*////
/conv_fail_59.cpp////*////
/cpp_int_complement.cpp////*////
/cpp_int_negate_1.cpp////*////
/cpp_int_negate_2.cpp////*////
/operator_fail_01.cpp////*////
/operator_fail_02.cpp////*////
/operator_fail_03.cpp////*////
/operator_fail_04.cpp////*////
/operator_fail_05.cpp////*////
/operator_fail_06.cpp////*////
/operator_fail_07.cpp////*////
/operator_fail_08.cpp////*////
/operator_fail_09.cpp////*////
/operator_fail_10.cpp////*////
/operator_fail_11.cpp////*////
/operator_fail_12.cpp////*////
/operator_fail_13.cpp////*////
/operator_fail_14.cpp////*////
/operator_fail_15.cpp////*////
/operator_fail_16.cpp////*////
/operator_fail_17.cpp////*////
/operator_fail_18.cpp////*////
